--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aditya Bhatt | Cybersecurity Analyst</title>
+    <title>Bharathraaj Pandian | Cybersecurity Analyst</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -41,9 +41,11 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Aditya Bhatt</h1>
+                    <h1>Bharathraaj Pandian</h1>
                     <h2>Information Security Analyst | VAPT Specialist | Penetration Tester</h2>
-                    <p>Dedicated third-year BTech CSE student with expertise in Cybersecurity, VAPT, and Cryptography, backed by global certifications. Skilled in problem-solving and innovation, seeking a role to enhance organizational security through advanced assessment and defense strategies.</p>
+                    <p>Cybersecurity professional with over 2 years of experience in securing digital assets, risk mitigation, and threat detection.
+Proficient in penetration testing, application security, and incident response. Holds multiple industry certifications and is
+dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust Architecture, and malware analysis</p>
                     <div class="cta-buttons">
                         <a href="#contact" class="btn primary-btn">Get In Touch</a>
                         <a href="#projects" class="btn secondary-btn">View Projects</a>
@@ -79,21 +81,22 @@
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I am a passionate Cybersecurity professional with a strong focus on Vulnerability Assessment and Penetration Testing. My expertise extends to cryptography, secure coding practices, and network security.</p>
-                    <p>Currently pursuing my BTech in Computer Science Engineering, I am constantly expanding my knowledge and skills in the rapidly evolving field of information security.</p>
+                    <p>Cybersecurity professional with over 2 years of experience in securing digital assets, risk mitigation, and threat detection.
+Proficient in penetration testing, application security, and incident response. Holds multiple industry certifications and is
+dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust Architecture, and malware analysis</p>
                 </div>
                 <div class="contact-info">
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
-                        <span>info.adityabhatt3010@gmail.com</span>
+                        <span>bharathraaj15@gmail.com</span>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <span>+91 98189 93884</span>
+                        <span>+1 (713) 899 2575</span>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>Delhi, India</span>
+                        <span>Houston, Texas</span>
                     </div>
                 </div>
             </div>
@@ -121,21 +124,31 @@
                 <div class="skill-category">
                     <h3>Programming & Scripting</h3>
                     <div class="skills-grid">
+                        <div class="skill-item"><span>Python</span></div>
                         <div class="skill-item"><span>Bash</span></div>
                         <div class="skill-item"><span>PowerShell</span></div>
-                        <div class="skill-item"><span>Java</span></div>
-                        <div class="skill-item"><span>Python</span></div>
-                        <div class="skill-item"><span>C</span></div>
-                        <div class="skill-item"><span>C++</span></div>
+                        <div class="skill-item"><span>HTML</span></div>
+                        <div class="skill-item"><span>JavaScript</span></div>
+                        <div class="skill-item"><span>PHP</span></div>
+                        <div class="skill-item"><span>YAML</span></div>
+                        <div class="skill-item"><span>KQL</span></div>
+                        
                     </div>
                 </div>
                 <div class="skill-category">
                     <h3>Tools & Technologies</h3>
                     <div class="skills-grid">
-                        <div class="skill-item"><span>AWS</span></div>
-                        <div class="skill-item"><span>MySQL</span></div>
-                        <div class="skill-item"><span>Oracle SQL</span></div>
-                        <div class="skill-item"><span>GitHub</span></div>
+                        <div class="skill-item"><span>Burp Suite</span></div>
+                        <div class="skill-item"><span>Metasploit</span></div>
+                        <div class="skill-item"><span>NMap</span></div>
+                        <div class="skill-item"><span>Zmap</span></div>
+                        <div class="skill-item"><span>Naabu</span></div>
+                        <div class="skill-item"><span>Nessus</span></div>
+                        <div class="skill-item"><span>IDA Pro</span></div>
+                        <div class="skill-item"><span>Snort</span></div>
+                        <div class="skill-item"><span>OSSEC</span></div>
+                        <div class="skill-item"><span>Splunk</span></div>
+                        <div class="skill-item"><span>Microsoft Office</span></div>
                     </div>
                 </div>
             </div>
@@ -153,19 +166,16 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-header">
-                        <h3>ShadowHash</h3>
+                        <h3>Smart Home Monitoring System</h3>
                         <div class="project-links">
                             <a href="https://github.com/AdityaBhatt3010/ShadowHash-All-in-One-Crypto-Solution" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://github.com/AdityaBhatt3010/ShadowHash-All-in-One-Crypto-Solution" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="project-body">
-                        <p class="project-description">All in One Crypto Solution with a self-developed ShadowHash Algorithm, offering encryption, breach detection, password generation, hash creation, comparison and malware scanning across 28 webpages.</p>
+                        <p class="project-description">Designed a safe and secure home monitoring system that can prevent accidental fire and shorting of home components.</p>
                         <div class="project-tech">
-                            <span>Java</span>
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>JavaScript</span>
+                            <span>IOT</span>
                         </div>
                     </div>
                 </div>
@@ -173,17 +183,15 @@
                 <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-header">
-                        <h3>SecureKeyGen</h3>
+                        <h3>Advanced Threat Detection System</h3>
                         <div class="project-links">
                             <a href="https://github.com/AdityaBhatt3010/SecureKeyGenerator" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://github.com/AdityaBhatt3010/SecureKeyGenerator" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="project-body">
-                        <p class="project-description">Robust cryptographic key generator built in Java, utilizing PBKDF2, XOR operations, and multi-layered encryption (AES, 3DES, Blowfish) to generate secure, unpredictable keys for encryption.</p>
+                        <p class="project-description">Designed and implemented an advanced threat detection system using Splunk and Elastic Stack to monitor real-time network traffic and detect suspicious activities.</p>
                         <div class="project-tech">
-                            <span>Java</span>
-                            <span>Cryptography</span>
                             <span>Security</span>
                         </div>
                     </div>
@@ -192,18 +200,17 @@
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-header">
-                        <h3>PixelPhantomX</h3>
+                        <h3>Smart Hospital Management System</h3>
                         <div class="project-links">
                             <a href="https://github.com/AdityaBhatt3010/PixelPhantomX" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://github.com/AdityaBhatt3010/PixelPhantomX" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="project-body">
-                        <p class="project-description">Adversarial image obfuscation tool that generates ghost images using noise injection, edge distortion, metadata poisoning, and watermarking to prevent unauthorized use in AI training.</p>
+                        <p class="project-description">Created a website so that hospital patient’s reports can easily be uploaded without any middleman.</p>
                         <div class="project-tech">
-                            <span>Python</span>
-                            <span>Computer Vision</span>
-                            <span>AI Security</span>
+                            <span>DBMS</span>
+                            <span>IOT</span>
                         </div>
                     </div>
                 </div>
@@ -211,14 +218,14 @@
                 <!-- Project 4 -->
                 <div class="project-card">
                     <div class="project-header">
-                        <h3>SteganoX</h3>
+                        <h3>Zero Trust Network Architecture Deployment</h3>
                         <div class="project-links">
                             <a href="https://github.com/AdityaBhatt3010/SteganoX-Hidden-Messages-in-Images" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://github.com/AdityaBhatt3010/SteganoX-Hidden-Messages-in-Images" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="project-body">
-                        <p class="project-description">A steganography tool enabling users to hide and extract secret messages from images, featuring command-line interface, interactive mode, and lightweight encoding/decoding. Available on PyPI.</p>
+                        <p class="project-description">Designed and implemented a Zero Trust Architecture using micro-segmentation and strong identity verification mechanisms to enhance security in enterprise networks.</p>
                         <div class="project-tech">
                             <span>Python</span>
                             <span>Steganography</span>
@@ -230,14 +237,14 @@
                 <!-- Project 5 -->
                 <div class="project-card">
                     <div class="project-header">
-                        <h3>ShadowShell</h3>
+                        <h3>Malware Analysis Sandbox</h3>
                         <div class="project-links">
                             <a href="https://github.com/AdityaBhatt3010/ShadowShell-Stealthy-and-Powerful-Backdoor" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://github.com/AdityaBhatt3010/ShadowShell-Stealthy-and-Powerful-Backdoor" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="project-body">
-                        <p class="project-description">Python-based reverse shell for ethical hacking and penetration testing, offering persistence, keylogging, screenshot capture, file transfer, and stealth remote control over compromised systems.</p>
+                        <p class="project-description">Built a custom malware analysis sandbox using IDA Pro, Python, and virtualization tools to analyze malware behavior and reverse engineer malicious code. </p>
                         <div class="project-tech">
                             <span>Python</span>
                             <span>Steganography</span>
@@ -249,14 +256,14 @@
                 <!-- Project 6 -->
                 <div class="project-card">
                     <div class="project-header">
-                        <h3>AWS-ScriptEngine</h3>
+                        <h3>Social Engineering Awareness Toolkit</h3>
                         <div class="project-links">
                             <a href="https://github.com/AdityaBhatt3010/AWS-ScriptEngine-Engineered-Scripts-for-AWS-Operations" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://github.com/AdityaBhatt3010/AWS-ScriptEngine-Engineered-Scripts-for-AWS-Operations" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="project-body">
-                        <p class="project-description">A collection of Bash and PowerShell scripts for automating AWS tasks, including CLI setup, S3, EC2, and DynamoDB management, streamlining cloud operations for Linux and Windows users.</p>
+                        <p class="project-description">Developed a toolkit to simulate phishing, pretexting, and baiting attacks in a controlled environment to train employees on recognizing social engineering threats.</p>
                         <div class="project-tech">
                             <span>PowerShell</span>
                             <span>Bash</span>
@@ -411,8 +418,8 @@
                         <i class="fas fa-university"></i>
                     </div>
                     <div class="certification-content">
-                        <h3>Professional Certificate Program in Cybersecurity - Red Team</h3>
-                        <p>IIT Kanpur (Capstone Projects)</p>
+                        <h3>CompTIA Pentest+</h3>
+                        <p>CompTIA</p>
                     </div>
                 </div>
                 <div class="certification-card">
@@ -420,8 +427,8 @@
                         <i class="fas fa-university"></i>
                     </div>
                     <div class="certification-content">
-                        <h3>Systems and Usable Security (Elite Silver)</h3>
-                        <p>NPTEL</p>
+                        <h3>CompTIA CYSA+</h3>
+                        <p>CompTIA</p>
                     </div>
                 </div>
                 <div class="certification-card">
@@ -429,8 +436,8 @@
                         <i class="fas fa-shield-alt"></i>
                     </div>
                     <div class="certification-content">
-                        <h3>Web Application Scanning Certification</h3>
-                        <p>Qualys</p>
+                        <h3>CompTIA CASP+</h3>
+                        <p>CompTIA</p>
                     </div>
                 </div>
                 <div class="certification-card">
@@ -438,8 +445,8 @@
                         <i class="fas fa-network-wired"></i>
                     </div>
                     <div class="certification-content">
-                        <h3>Networking Basics & Introduction to Packet Tracer</h3>
-                        <p>Cisco NetAcad</p>
+                        <h3>CCNA</h3>
+                        <p>Cisco</p>
                     </div>
                 </div>
                 <div class="certification-card">
@@ -447,8 +454,8 @@
                         <i class="fab fa-aws"></i>
                     </div>
                     <div class="certification-content">
-                        <h3>AWS Certified Cloud Practitioner</h3>
-                        <p>Amazon Web Services</p>
+                        <h3>CCNP</h3>
+                        <p>Cisco</p>
                     </div>
                 </div>
                 <div class="certification-card">
@@ -456,8 +463,53 @@
                         <i class="fas fa-paper-plane"></i>
                     </div>
                     <div class="certification-content">
-                        <h3>API Fundamentals Student Expert</h3>
-                        <p>Postman</p>
+                        <h3>Pega CSA</h3>
+                        <p>Pega</p>
+                    </div>
+                </div>
+                <div class="certification-card">
+                    <div class="certification-logo">
+                        <i class="fas fa-paper-plane"></i>
+                    </div>
+                    <div class="certification-content">
+                        <h3>Pega CSSA</h3>
+                        <p>Pega</p>
+                    </div>
+                </div>
+                <div class="certification-card">
+                    <div class="certification-logo">
+                        <i class="fas fa-paper-plane"></i>
+                    </div>
+                    <div class="certification-content">
+                        <h3>Pega CEI</h3>
+                        <p>Pega</p>
+                    </div>
+                </div>
+                <div class="certification-card">
+                    <div class="certification-logo">
+                        <i class="fas fa-paper-plane"></i>
+                    </div>
+                    <div class="certification-content">
+                        <h3>SAL1</h3>
+                        <p>Try Hack Me</p>
+                    </div>
+                </div>
+                <div class="certification-card">
+                    <div class="certification-logo">
+                        <i class="fas fa-paper-plane"></i>
+                    </div>
+                    <div class="certification-content">
+                        <h3>Associate in Cybersecurity</h3>
+                        <p>Fortinet</p>
+                    </div>
+                </div>
+                <div class="certification-card">
+                    <div class="certification-logo">
+                        <i class="fas fa-paper-plane"></i>
+                    </div>
+                    <div class="certification-content">
+                        <h3>AWS Security</h3>
+                        <p>AWS</p>
                     </div>
                 </div>
             </div>
