--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="#home"><span>&lt;</span> AB <span>/&gt;</span></a>
+                    <a href="#home"><span>&lt;</span> Cyber_Glitch <span>/&gt;</span></a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
@@ -481,8 +481,8 @@ dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust A
                         <i class="fas fa-paper-plane"></i>
                     </div>
                     <div class="certification-content">
-                        <h3>Pega CEI</h3>
-                        <p>Pega</p>
+                        <h3>CEI (Certified Instructor)</h3>
+                        <p>EC Council</p>
                     </div>
                 </div>
                 <div class="certification-card">
