--- a/index.html
+++ b/index.html
@@ -114,11 +114,14 @@ dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust A
                 <div class="skill-category">
                     <h3>Security</h3>
                     <div class="skills-grid">
-                        <div class="skill-item"><span>Cybersecurity</span></div>
-                        <div class="skill-item"><span>VAPT</span></div>
-                        <div class="skill-item"><span>Ethical Hacking</span></div>
-                        <div class="skill-item"><span>Cryptography</span></div>
+                        <div class="skill-item"><span>Bug Bounty</span></div>
+                        <div class="skill-item"><span>Vulnerability Assessment</span></div>
+                        <div class="skill-item"><span>Data Loss Prevention</span></div>
+                        <div class="skill-item"><span>Application Security</span></div>
                         <div class="skill-item"><span>Network Security</span></div>
+                        <div class="skill-item"><span>Ethical Hacking</span></div>
+                        <div class="skill-item"><span>Social Engineering Awareness</span></div>
+                        <div class="skill-item"><span>Threat Modeling</span></div>
                     </div>
                 </div>
                 <div class="skill-category">
