--- a/index.html
+++ b/index.html
@@ -155,6 +155,51 @@ dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust A
                     </div>
                 </div>
             </div>
+            <div class="skills-container">
+                <div class="skill-category">
+                    <h3>Security</h3>
+                    <div class="skills-grid">
+                        <div class="skill-item"><span>Bug Bounty</span></div>
+                        <div class="skill-item"><span>Vulnerability Assessment</span></div>
+                        <div class="skill-item"><span>Data Loss Prevention</span></div>
+                        <div class="skill-item"><span>Application Security</span></div>
+                        <div class="skill-item"><span>Network Security</span></div>
+                        <div class="skill-item"><span>Ethical Hacking</span></div>
+                        <div class="skill-item"><span>Social Engineering Awareness</span></div>
+                        <div class="skill-item"><span>Threat Modeling</span></div>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>Programming & Scripting</h3>
+                    <div class="skills-grid">
+                        <div class="skill-item"><span>Python</span></div>
+                        <div class="skill-item"><span>Bash</span></div>
+                        <div class="skill-item"><span>PowerShell</span></div>
+                        <div class="skill-item"><span>HTML</span></div>
+                        <div class="skill-item"><span>JavaScript</span></div>
+                        <div class="skill-item"><span>PHP</span></div>
+                        <div class="skill-item"><span>YAML</span></div>
+                        <div class="skill-item"><span>KQL</span></div>
+                        
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>Tools & Technologies</h3>
+                    <div class="skills-grid">
+                        <div class="skill-item"><span>Burp Suite</span></div>
+                        <div class="skill-item"><span>Metasploit</span></div>
+                        <div class="skill-item"><span>NMap</span></div>
+                        <div class="skill-item"><span>Zmap</span></div>
+                        <div class="skill-item"><span>Naabu</span></div>
+                        <div class="skill-item"><span>Nessus</span></div>
+                        <div class="skill-item"><span>IDA Pro</span></div>
+                        <div class="skill-item"><span>Snort</span></div>
+                        <div class="skill-item"><span>OSSEC</span></div>
+                        <div class="skill-item"><span>Splunk</span></div>
+                        <div class="skill-item"><span>Microsoft Office</span></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
