--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust A
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3>Tools & Technologies</h3>
+                    <h3>Tools</h3>
                     <div class="skills-grid">
                         <div class="skill-item"><span>Burp Suite</span></div>
                         <div class="skill-item"><span>Metasploit</span></div>
@@ -148,55 +148,47 @@ dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust A
                         <div class="skill-item"><span>Naabu</span></div>
                         <div class="skill-item"><span>Nessus</span></div>
                         <div class="skill-item"><span>IDA Pro</span></div>
-                        <div class="skill-item"><span>Snort</span></div>
                         <div class="skill-item"><span>OSSEC</span></div>
-                        <div class="skill-item"><span>Splunk</span></div>
-                        <div class="skill-item"><span>Microsoft Office</span></div>
-                    </div>
-                </div>
-            </div>
-            <div class="skills-container">
-                <div class="skill-category">
-                    <h3>Security</h3>
-                    <div class="skills-grid">
-                        <div class="skill-item"><span>Bug Bounty</span></div>
-                        <div class="skill-item"><span>Vulnerability Assessment</span></div>
-                        <div class="skill-item"><span>Data Loss Prevention</span></div>
-                        <div class="skill-item"><span>Application Security</span></div>
-                        <div class="skill-item"><span>Network Security</span></div>
-                        <div class="skill-item"><span>Ethical Hacking</span></div>
-                        <div class="skill-item"><span>Social Engineering Awareness</span></div>
-                        <div class="skill-item"><span>Threat Modeling</span></div>
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3>Programming & Scripting</h3>
+                    <h3>Frameworks</h3>
                     <div class="skills-grid">
-                        <div class="skill-item"><span>Python</span></div>
-                        <div class="skill-item"><span>Bash</span></div>
-                        <div class="skill-item"><span>PowerShell</span></div>
-                        <div class="skill-item"><span>HTML</span></div>
-                        <div class="skill-item"><span>JavaScript</span></div>
-                        <div class="skill-item"><span>PHP</span></div>
-                        <div class="skill-item"><span>YAML</span></div>
-                        <div class="skill-item"><span>KQL</span></div>
+                        <div class="skill-item"><span>OWASP Top 10</span></div>
+                        <div class="skill-item"><span>CVE/ CPE/ CWE</span></div>
+                        <div class="skill-item"><span>SAST/ DAST</span></div>
+                        <div class="skill-item"><span>Secure SDLC</span></div>
+                        <div class="skill-item"><span>Zero Trust Architecture</span></div>
+                        <div class="skill-item"><span>Threat Intelligence</span></div>
+                        <div class="skill-item"><span>TTPs</span></div>
+                        <div class="skill-item"><span>OSINT</span></div>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>Operating Systems</h3>
+                    <div class="skills-grid">
+                        <div class="skill-item"><span>Linux</span></div>
+                        <div class="skill-item"><span>Windows</span></div>
+                        <div class="skill-item"><span>Azure Kubernetes Services</span></div>
+                        <div class="skill-item"><span>Elastic Stack</span></div>
+                        <div class="skill-item"><span>Grafana Loki</span></div>
+                        <div class="skill-item"><span>Load Balancers</span></div>
+                        <div class="skill-item"><span>Firewalls</span></div>
+                        <div class="skill-item"><span>CI/CD Pipelines</span></div>
                         
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3>Tools & Technologies</h3>
+                    <h3>Incident Management Tools</h3>
                     <div class="skills-grid">
-                        <div class="skill-item"><span>Burp Suite</span></div>
-                        <div class="skill-item"><span>Metasploit</span></div>
-                        <div class="skill-item"><span>NMap</span></div>
-                        <div class="skill-item"><span>Zmap</span></div>
-                        <div class="skill-item"><span>Naabu</span></div>
-                        <div class="skill-item"><span>Nessus</span></div>
-                        <div class="skill-item"><span>IDA Pro</span></div>
-                        <div class="skill-item"><span>Snort</span></div>
-                        <div class="skill-item"><span>OSSEC</span></div>
                         <div class="skill-item"><span>Splunk</span></div>
-                        <div class="skill-item"><span>Microsoft Office</span></div>
+                        <div class="skill-item"><span>Snort</span></div>
+                        <div class="skill-item"><span>OS SEC</span></div>
+                        <div class="skill-item"><span>Threat Detection System</span></div>
+                        <div class="skill-item"><span>Malware Sandbox</span></div>
+                        <div class="skill-item"><span>ZTNA Deployment</span></div>
+                        <div class="skill-item"><span>SEAT Toolkit</span></div>
+                        <div class="skill-item"><span>Hospital Systems</span></div>
                     </div>
                 </div>
             </div>
@@ -375,14 +367,53 @@ dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust A
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <div class="timeline-content">
-                        <h3>Security Analyst</h3>
-                        <h4>Conversia</h4>
-                        <span class="timeline-date">Jan 2025 – Mar 2025</span>
+                        <h3>Cybersecurity Application Development Engineer</h3>
+                        <h4>Unisys Global Services</h4>
+                        <span class="timeline-date">Jul 2022 – Jul 2024</span>
                         <ul>
-                            <li>Conducted vulnerability assessment and penetration testing using tools like Nessus and Acunetix</li>
-                            <li>Performed manual testing to identify security vulnerabilities in web applications</li>
-                            <li>Managed AWS IAM configurations and enhanced cloud security posture</li>
-                            <li>Documented findings and provided remediation recommendations to clients</li>
+                            <li>Developed secure applications for various Clients and improved their security posture by 62% which led to a secure environment.</li>
+                            <li>Contributed to major releases by implementing security features, addressing vulnerabilities, and developing user stories to enhance overall system security.</li>
+                            <li>Led efforts in identifying and resolving security bugs, ensuring compliance with industry standards and enhancing application resilience.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Cybersecurity Analyst Intern</h3>
+                        <h4>Necurity Solutions</h4>
+                        <span class="timeline-date">Aug 2021 – Mar 2022</span>
+                        <ul>
+                            <li>Conducted penetration tests; implemented automated threat detection.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Cybersecurity Instructor</h3>
+                        <h4>Zybeak Technologies</h4>
+                        <span class="timeline-date">Jul 2018 – Apr 2022</span>
+                        <ul>
+                            <li>Delivered CEH v11 and Security+ training.</li>
+                            <li>Conducted security assessments on apps and networks.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Network Security Instructor</h3>
+                        <h4>Sansbound Networks Pvt Ltd</h4>
+                        <span class="timeline-date">Apr 2019 – May 2021</span>
+                        <ul>
+                            <li>Trained 2000+ students in cybersecurity and networking fundamentals.</li>
                         </ul>
                     </div>
                 </div>
@@ -403,10 +434,10 @@ dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust A
                         <i class="fas fa-graduation-cap"></i>
                     </div>
                     <div class="timeline-content">
-                        <h3>BTech in Computer Science Engineering</h3>
-                        <h4>Amity University Uttar Pradesh</h4>
-                        <span class="timeline-date">2022 – 2026</span>
-                        <p>CGPA: 8.36</p>
+                        <h3>MS in Cybersecurity</h3>
+                        <h4>University of Houston</h4>
+                        <span class="timeline-date">2024 – 2026</span>
+                        <p>GPA: 4.0</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -414,13 +445,13 @@ dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust A
                         <i class="fas fa-school"></i>
                     </div>
                     <div class="timeline-content">
-                        <h3>Class XII</h3>
-                        <h4>Somerville School</h4>
-                        <span class="timeline-date">2022</span>
-                        <p>Percentage: 89.8%</p>
+                        <h3>BTech in Computer Science</h3>
+                        <h4>SRM Institute of Science and Tech</h4>
+                        <span class="timeline-date">2018 - 2022</span>
+                        <p>GPA: 3.5</p>
                     </div>
                 </div>
-                <div class="timeline-item">
+            <!--    <div class="timeline-item">
                     <div class="timeline-icon">
                         <i class="fas fa-school"></i>
                     </div>
@@ -429,7 +460,7 @@ dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust A
                         <h4>Somerville School</h4>
                         <span class="timeline-date">2020</span>
                         <p>Percentage: 94.8%</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
