--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@ dedicated to continuous learning, with hands-on experience in SIEM, Zero Trust A
                         <span>Houston, Texas</span>
                     </div>
                 </div>
+                <div style="margin-top: 20px; text-align: center;">
+  <img src="https://tryhackme.com/badge/3731754" alt="TryHackMe Badge" style="height: 60px;">
+</div>
+
             </div>
         </div>
     </section>
