--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                         </div>
                         <div class="text">
                             <h3>Email</h3>
-                            <p>info.adityabhatt3010@gmail.com</p>
+                            <p>bharathraaj15@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-info-item">
@@ -810,7 +810,7 @@
                         </div>
                         <div class="text">
                             <h3>Phone</h3>
-                            <p>+91 98189 93884</p>
+                            <p>+1 (713) 899 2575</p>
                         </div>
                     </div>
                     <div class="contact-info-item">
@@ -819,7 +819,7 @@
                         </div>
                         <div class="text">
                             <h3>LinkedIn</h3>
-                            <p><a href="https://www.linkedin.com/in/aditya-bhatt-b61868250/" target="_blank">Connect with me</a></p>
+                            <p><a href="https://www.linkedin.com/in/bharathraajpandian" target="_blank">Connect with me</a></p>
                         </div>
                     </div>
                 </div>
