--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/bharathraajpandian" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/bharathraaj15" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://hashnode.com/@cyberglitch" target="_blank"><i class="fab fa-medium"></i></a> 
+                        <a href="https://hashnode.com/@cyberglitch" target="_blank"><i class="fab fa-hashnode"></i></a> 
                         <a href="https://www.credly.com/users/bharathraaj15" target="_blank"><i class="fas fa-award"></i></a>
                         <a href="https://tryhackme.com/p/cyberglitch015" target="_blank"><i class="fas fa-shield-alt"></i></a>
                         <a href="https://linktr.ee/bharathraajpandian" target="_blank"><i class="fas fa-link"></i></a>
