--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-icon">
-                        <i class="fas fa-briefcase"></i>
+                        <i class="fas fa-person-chalkboard"></i>
                     </div>
                     <div class="timeline-content">
                         <h3>Cybersecurity Instructor</h3>
@@ -424,7 +424,7 @@
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-icon">
-                        <i class="fas fa-briefcase"></i>
+                        <i class="fas fa-person-chalkboard"></i>
                     </div>
                     <div class="timeline-content">
                         <h3>Network Security Instructor</h3>
@@ -512,7 +512,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fas fa-university"></i>
+                        <i class="fas fa-sheild-alt"></i>
                     </div>
                     <div class="certification-content">
                         <h3>CompTIA Pentest+</h3>
@@ -521,7 +521,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fas fa-university"></i>
+                        <i class="fas fa-shield-alt"></i>
                     </div>
                     <div class="certification-content">
                         <h3>CompTIA CYSA+</h3>
@@ -548,7 +548,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fab fa-aws"></i>
+                        <i class="fab fa-network-wired"></i>
                     </div>
                     <div class="certification-content">
                         <h3>CCNP</h3>
@@ -557,7 +557,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fas fa-paper-plane"></i>
+                        <i class="fas fa-certificate"></i>
                     </div>
                     <div class="certification-content">
                         <h3>Pega CSA</h3>
@@ -566,7 +566,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fas fa-paper-plane"></i>
+                        <i class="fas fa-certificate"></i>
                     </div>
                     <div class="certification-content">
                         <h3>Pega CSSA</h3>
@@ -593,7 +593,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fas fa-paper-plane"></i>
+                        <i class="fas fa-certificate"></i>
                     </div>
                     <div class="certification-content">
                         <h3>Associate in Cybersecurity</h3>
@@ -602,7 +602,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fas fa-paper-plane"></i>
+                        <i class="fas fa-aws"></i>
                     </div>
                     <div class="certification-content">
                         <h3>AWS Security</h3>
