--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fas fa-sheild-alt"></i>
+                        <i class="fas fa-shield-alt"></i>
                     </div>
                     <div class="certification-content">
                         <h3>CompTIA Pentest+</h3>
@@ -548,7 +548,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fab fa-network-wired"></i>
+                        <i class="fas fa-network-wired"></i>
                     </div>
                     <div class="certification-content">
                         <h3>CCNP</h3>
@@ -602,7 +602,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fas fa-aws"></i>
+                        <i class="fab fa-aws"></i>
                     </div>
                     <div class="certification-content">
                         <h3>AWS Security</h3>
