--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fas fa-paper-plane"></i>
+                        <i class="fas fa-shield-alt"></i>
                     </div>
                     <div class="certification-content">
                         <h3>CEI (Certified Instructor)</h3>
@@ -584,7 +584,7 @@
                 </div>
                 <div class="certification-card">
                     <div class="certification-logo">
-                        <i class="fas fa-paper-plane"></i>
+                        <i class="fas fa-shield-alt"></i>
                     </div>
                     <div class="certification-content">
                         <h3>SAL1</h3>
